# vmkit

./: Cargo.toml  LICENSE  README.md  wrapper.h
crates/context/: Cargo.toml  build.rs
crates/context/src/: lib.rs  stack_context.rs
crates/context/src/fiber/: fcontext.rs  mod.rs
crates/context/src/internal/: fcontext.rs  mod.rs
crates/macroassembler/examples/: brainfuck.rs
crates/macroassembler/src/: main.rs
crates/macroassembler/src/assembler/: arm64assembler.rs  arm64disassembler.rs  assembler_common.rs  disassembler.rs  link_buffer.rs  macro_assembler_arm64.rs  macro_assembler_riscv64.rs  macro_assembler_x86_64.rs  macro_assembler_x86_common.rs
crates/macroassembler/src/jit/: callconv.rs  fpr_info.rs  gpr_info.rs  helpers.rs  mod.rs
crates/macroassembler/src/wtf/: executable_memory_handle.rs
crates/mu-ir/: Cargo.toml
crates/mu-ir/src/: entity.rs  ir.rs  lib.rs  types.rs
crates/mu-ir/src/ir/: dfg.rs  entities.rs  function.rs  instructions.rs
crates/mu-utils/: Cargo.toml
crates/mu-utils/src/: lib.rs  rc.rs
crates/swapstack/: Cargo.toml  README.md  build.rs
crates/swapstack/benches/: context_switch.rs
crates/swapstack/examples/: fib.rs
crates/swapstack/src/: coroutine.rs  green.rs  lib.rs  main.rs  raw.rs  stack.rs  stack_bounds.rs  utils.rs  x86_64.rs
crates/swapstack/src/arch/: aarch64.rs  x86_64.rs
crates/swapstack/src/asm/: swapstack_arm64_aapcs_elf_gas.S  swapstack_riscv64_sysv_elf_gas.S  swapstack_x86_64_ms_pe_masm.asm  swapstack_x86_64_sysv_elf_gas.S
crates/vmkit/: Cargo.toml  build.rs  wrapper.h
crates/vmkit/src/: arch.rs  compiler.rs  lib.rs  main.rs  mm.rs  mock.rs  objectmodel.rs  runtime.rs  sync.rs  threads.rs  utils.rs
crates/vmkit/src/arch/: x86_64.rs
crates/vmkit/src/compiler/: masm.rs
crates/vmkit/src/mm/: active_plan.rs  collection.rs  scanning.rs  shadow_stack.rs  slot.rs  tlab.rs
crates/vmkit/src/objectmodel/: ephemeron.rs  header.rs  nanbox.rs  reference.rs  traits.rs  vtable.rs
crates/vmkit/src/runtime/: backtrace.rs  flags.rs  frame.rs  options.rs  osr.rs  signals.rs  stack.rs  threads.rs  thunks.rs  unwind.rs
crates/vmkit/src/runtime/threads/: stack.rs
crates/vmkit/src/runtime/unwind/: object.rs
crates/vmkit/src/sync/: basic_lock.rs  lock_stack.rs  object_monitor.rs
crates/vmkit/src/threads/: stack.rs
crates/vmkit/src/utils/: flags.rs
src/: active_plan.rs  collection.rs  lib.rs  mm.rs  objectmodel.rs  scanning.rs  swapstack.rs  sync.rs  threads.rs
src/objectmodel/: constants.rs  header.rs  reference.rs  vtable.rs
