[package]
name = "vmkit"
version = "0.1.0"
edition = "2021"

[dependencies]
mmtk = { git = "https://github.com/mmtk/mmtk-core" }
easy-bitfield = "*"
num-traits = "*"
env_logger = "*"
log = "*"
parking_lot = "*"
macroassembler = { path = "../macroassembler", features = ["x86-disasm"] }
cfg-if = "1.0"
naked-function = "0.1"
flume = "0.11"
tinyvec = "1.8"
object = "*"
memmap2 = "*"
framehop = "*"
framehop-object = "*"
libc = "0.2"
cranelift-codegen = { version = "*", optional = true }
[features]
default = ["cranelift-support"]
cranelift-support = []

[build-dependencies]
autotools = "*"
bindgen = "*"
fs_extra = "*"
